<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header layout with title and close button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <!-- TextView for the title -->
        <TextView
            android:id="@+id/textViewRecordTally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_tally"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Close button -->
        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TextInputLayout for kilos and price in the same row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutKilos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_kilos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextKilos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/enter_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Spinner for merchandise type in its own row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/spinnerMerchandiseType"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/merchandise_type_array" />
    </LinearLayout>

    <!-- Spinner for the buyer in its own row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/spinnerBuyer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/buyer_array" />
    </LinearLayout>

    <!-- Spinner for the payment status in its own row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/spinnerPaymentStatus"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/payment_status_array" />
    </LinearLayout>


    <!-- Buttons for adding a tally and done -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/done"
            android:backgroundTint="@android:color/transparent"
            android:padding="8dp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonAddTally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tally"
            android:layout_marginStart="16dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
