<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Close Button -->
    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/close"
        android:layout_marginBottom="16dp"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/expensesField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/buttonClose"
        android:layout_marginBottom="16dp">

        <Spinner
            android:id="@+id/spinnerExpense"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/expenses_array"
            android:prompt="@string/select_expense" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter expense" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/expensesField"
        android:id="@+id/quantityAndUnitFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/quantityTextInputLayout"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/priceTextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="Enter price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/amountTextInputLayout"
        android:layout_below="@+id/quantityAndUnitFields"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="Enter amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchUseQuantityUnit"
        android:layout_below="@+id/amountTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:text="@string/use_with_quantity_and_unit" />

    <Button
        android:layout_below="@+id/switchUseQuantityUnit"
        android:id="@+id/buttonAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense" />
</RelativeLayout>
